[gd_scene load_steps=3 format=2]

[ext_resource path="res://fonts/NotoSans.tres" type="DynamicFont" id=1]
[ext_resource path="res://logic/BallSelector.gd" type="Script" id=2]

[node name="PopupMenu" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 40.0
margin_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 2 )

[node name="TabContainer" type="TabContainer" parent="."]
margin_right = 400.0
margin_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColourMenu" type="MarginContainer" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 57.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/ColourMenu"]
margin_right = 392.0
margin_bottom = 511.0

[node name="ColorPicker" type="ColorPicker" parent="TabContainer/ColourMenu/VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 44.0
margin_top = 44.0
margin_right = 352.0
margin_bottom = 506.0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/ColourMenu/VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0

[node name="ApplyButton" type="Button" parent="TabContainer/ColourMenu/VBoxContainer/HBoxContainer"]
margin_right = 12.0
margin_bottom = 20.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Apply"

[node name="OkButton" type="Button" parent="TabContainer/ColourMenu/VBoxContainer/HBoxContainer"]
margin_right = 12.0
margin_bottom = 20.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Ok"
[connection signal="pressed" from="TabContainer/ColourMenu/VBoxContainer/HBoxContainer/ApplyButton" to="." method="_on_ApplyButton_pressed"]
[connection signal="pressed" from="TabContainer/ColourMenu/VBoxContainer/HBoxContainer/OkButton" to="." method="_on_OkButton_pressed"]
